fix: add comments enpdoints
